--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Jobs#index</h1>
-<p>Find me in app/views/jobs/index.html.erb</p>
+<div class="wrapper">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="jobs">
+        <h3>Jobs</h3>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="applied">
+        <h3>Applied</h3>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="response">
+        <h3>Response</h3>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="interview">
+        <h3>Interview</h3>
+      </div>
+    </div>
+  </div>
+</div>
