--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the jobs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.col-md-3 {
+  padding: 0 !important;
+  margin: 0 !important;
+
+  h3 {
+    margin: 0 0 0 20px;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 200;
+    letter-spacing: 1px;
+    padding: 20px;
+  }
+}
+
+.jobs {
+  background-color: rgba(246, 187, 66, 0.25);
+}
+
+.applied {
+  background-color: rgba(246, 187, 66, 0.45);
+}
+
+.response {
+  background-color: rgba(246, 187, 66, 0.65);
+}
+
+.interview {
+  background-color: rgba(246, 187, 66, 0.85);
+}
