--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200,300,600,100' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200,300,600|Arvo:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -41,14 +41,12 @@
           </li> -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><p class="navbar-text">Signed in as Mark Otto</p></li>
+          <li><p class="navbar-text">Signed in as Kevin Fitzhenry</p></li>
           <li><a href="#"><span>Logout</span></a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  <div class="container">
-    <%= yield %>
-  </div>
+  <%= yield %>
 </body>
 </html>
