--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,22 +2,45 @@
   <div class="row">
     <div class="col-md-3">
       <div class="jobs">
-        <h3>Jobs</h3>
+        <h3 class="stage">Jobs</h3>
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <span>Front End Developer<span class="pull-right">Added on 2/12/2016</span></span>
+          </div>
+          <div class="panel-body">
+            <h5 class="company">Sleepless Media</h5>
+            <p>Santa Cruz, CA</p>
+            <button type="button" class="btn btn-success">Applied ?</button>
+            <div class="btn-group pull-right" role="group" aria-label="...">
+              <button type="button" class="btn btn-primary"><i class="fa fa-link"></i></button>
+              <button type="button" class="btn btn-warning"><i class="fa fa-eye"></i></button>
+              <button type="button" class="btn btn-danger"><i class="fa fa-trash-o"></i></button>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
     <div class="col-md-3">
       <div class="applied">
-        <h3>Applied</h3>
+        <h3 class="stage">Applied</h3>
+
+
       </div>
     </div>
     <div class="col-md-3">
       <div class="response">
-        <h3>Response</h3>
+        <h3 class="stage">Response</h3>
+
+
       </div>
     </div>
     <div class="col-md-3">
       <div class="interview">
-        <h3>Interview</h3>
+        <h3 class="stage">Interview</h3>
+
+
       </div>
     </div>
   </div>
