Styled Logout button, .stages, moved logged in as to left

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,3 +56,14 @@ nav li a, .navbar-text {
 #logo_icon {
   margin-right: 8px;
 }
+
+.icon {
+  margin-right: 6px;
+}
+
+#logout {
+  border: 1px solid white;
+  padding: 3px 10px;
+  border-radius: 6px;
+  margin-top: 11px;
+}
