--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,9 @@
             </ul>
           </li> -->
         </ul>
+        <p class="navbar-text"><span class="glyphicon glyphicon-user icon" aria-hidden="true"></span>Signed in as Kevin Fitzhenry</p>
         <ul class="nav navbar-nav navbar-right">
-          <li><p class="navbar-text">Signed in as Kevin Fitzhenry</p></li>
-          <li><a href="#"><span>Logout</span></a></li>
+          <li><a href="#" id="logout">LOG OUT</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
