--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -9,11 +9,12 @@
   margin: 0 !important;
 
   .stage {
-    margin: 0 0 0 20px;
+    margin: 0 20px 25px 30px;
     font-family: 'Work Sans', sans-serif;
     font-weight: 200;
     letter-spacing: 1px;
-    padding: 20px;
+    padding: 20px 0 10px 0;
+    border-bottom: 1px solid #434A54
   }
 }
 
