Added checkboxes to jobs panel

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -14,7 +14,7 @@
     font-weight: 200;
     letter-spacing: 1px;
     padding: 20px 0 10px 0;
-    border-bottom: 1px solid #434A54
+    border-bottom: 1px dotted #434A54
   }
 }
 
@@ -48,4 +48,8 @@
 
 .company {
   margin: 0;
+}
+
+.description {
+  margin-bottom: 20px;
 }
