--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -11,7 +11,18 @@
           <div class="panel-body">
             <h5 class="company">Sleepless Media</h5>
             <p>Santa Cruz, CA</p>
-            <button type="button" class="btn btn-success">Applied ?</button>
+            <h6>Job Description:</h6>
+            <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use.</p>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Cover Letter</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Résumé | CV</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="">Application</label>
+            </div>
+            <button type="button" class="btn btn-success">Finished Application</button>
             <div class="btn-group pull-right" role="group" aria-label="...">
               <button type="button" class="btn btn-primary"><i class="fa fa-link"></i></button>
               <button type="button" class="btn btn-warning"><i class="fa fa-eye"></i></button>
