--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,7 @@ nav {
 }
 
 .navbar-default, .navbar-collapse {
-  border-color: #434A54;
+  border: 0;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
@@ -65,5 +65,5 @@ nav li a, .navbar-text {
   border: 1px solid white;
   padding: 3px 10px;
   border-radius: 6px;
-  margin-top: 11px;
+  margin-top: 10px;
 }
