--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Pipeline <span class="sr-only">(current)</span></a></li>
           <li><a href="#">Jobs to Apply</a></li>
-          <li><a href="#">Add Job</a></li>
+          <li>
+            <a href="#" data-toggle="modal" data-target="#myModal">Add Job</a>
+          </li>
           <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hustle <span class="caret"></span></a>
             <ul class="dropdown-menu">
