--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -16,11 +16,11 @@
 
   .stage {
     margin: 0 20px 25px 30px;
-    font-family: 'Work Sans', sans-serif;
+    font-family: $main-font;
     font-weight: 200;
     letter-spacing: 1px;
     padding: 20px 0 15px 0;
-    border-bottom: 1px dotted #434A54
+    border-bottom: 1px dotted $primary-gray;
   }
 }
 
