--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,19 @@
   <div class="row">
     <div class="col-md-4 col-md-offset-2">
       <h3 class="login-title">Register</h3>
+      <!-- REGISTRAION ERRORS -->
+      <%  if flash[:reg_errors]
+        flash[:reg_errors].each do |error| %>
+        <p style="color: rgb(193, 12, 12)"><%= error %></p>
+      <%  end
+      end %>
+
+      <!-- REGISTRAION SUCCESS -->
+      <% if flash[:success]
+        flash[:success].each do |message| %>
+          <p style="color: rgb(2, 150, 8);"><%= message %></p>
+        <% end %>
+      <% end %>
       <form role="form" action="/register" method="post" class="reg">
         <div class="form-group">
           <label for="first_name">First Name:</label>
@@ -35,6 +48,12 @@
     </div>
     <div class="col-md-4">
       <h3 class="login-title">Login</h3>
+      <!-- LOGIN ERRORS -->
+      <% if flash[:errors]
+        flash[:errors].each do |error| %>
+          <p style="color: rgb(193, 12, 12)"><%= error %></p>
+        <% end %>
+      <% end %>
       <form role="form" action="/login" method="post" class="login">
         <div class="form-group">
           <label for="email">Email address:</label>
