--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,9 +32,9 @@
           </ul>
         </li> -->
       </ul>
-      <p class="navbar-text"><span class="glyphicon glyphicon-user icon" aria-hidden="true"></span>Signed in as Kevin Fitzhenry</p>
+      <p class="navbar-text"><span class="glyphicon glyphicon-user icon" aria-hidden="true"></span>Signed in as <%= @full_name %></p>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" id="logout">LOG OUT</a></li>
+        <li><a href="/logout" id="logout">LOG OUT</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
