--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,14 +55,14 @@ nav li a, .navbar-text {
 
 #logout {
   border: 1px solid white;
-  padding: 3px 10px;
+  padding: 1px 8px;
   border-radius: 6px;
-  margin-top: 10px;
+  margin-top: 13px;
   &:hover {
     transition: background-color 0.5s ease;
     background-color: white;
-    color: black;
-    border-color: black;
+    color: $primary-gray;
+    border-color: $primary-gray;
   }
 }
 
