--- a/app/views/jobs/partials/_interview.html.erb
+++ b/app/views/jobs/partials/_interview.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="btn-group pull-right" role="group" aria-label="...">
       <button type="button" class="btn btn-primary"><i class="fa fa-link"></i></button>
-      <button type="button" class="btn btn-warning"><i class="fa fa-eye"></i></button>
+      <button type="button" class="btn btn-warning"><i class="fa fa-pencil"></i></button>
       <button type="button" class="btn btn-danger"><i class="fa fa-trash-o"></i></button>
     </div>
   </div>
