--- a/app/views/jobs/partials/_jobs.html.erb
+++ b/app/views/jobs/partials/_jobs.html.erb
@@ -18,7 +18,7 @@
     </div>
     <button type="button" class="btn btn-success">Finished Application</button>
     <div class="btn-group pull-right" role="group" aria-label="...">
-      <button type="button" class="btn btn-primary"><i class="fa fa-link"></i></button>
+      <button type="button" class="btn btn-primary" data-toggle="popover" title="Job Posting Link" data-content="Open the original job posting link in a new browser tab" data-trigger="hover" data-placement="top"><i class="fa fa-link"></i></button>
       <button type="button" class="btn btn-warning"><i class="fa fa-eye"></i></button>
       <button type="button" class="btn btn-danger"><i class="fa fa-trash-o"></i></button>
     </div>
