--- a/app/views/jobs/_add_job_modal.html.erb
+++ b/app/views/jobs/_add_job_modal.html.erb
@@ -10,23 +10,23 @@
         <form role="form" method="post" action="/add_job">
           <div class="form-group">
             <label for="jobTitle">Job Title</label>
-            <input type="text" class="form-control" id="jobTitle" placeholder="Job Title">
+            <input type="text" class="form-control" name="title" placeholder="Job Title">
           </div>
           <div class="form-group">
             <label for="company">Company</label>
-            <input type="text" class="form-control" id="company" placeholder="Company name">
+            <input type="text" class="form-control" name="company" placeholder="Company name">
           </div>
           <div class="form-group">
             <label for="location">Location</label>
-            <input type="text" class="form-control" id="location" placeholder="Location">
+            <input type="text" class="form-control" name="location" placeholder="Location">
           </div>
           <div class="form-group">
             <label for="link">Link to Job Posting</label>
-            <input type="text" class="form-control" id="link" placeholder="www.jobposting.com">
+            <input type="text" class="form-control" name="link" placeholder="www.jobposting.com">
           </div>
           <div class="form-group">
             <label for="location">Job Description</label>
-            <textarea class="form-control" rows="3" placeholder="Add a brief job description..."></textarea>
+            <textarea class="form-control" rows="3" name="description" placeholder="Add a brief job description..."></textarea>
           </div>
           <div class="modal-footer">
             <button type="submit" class="btn btn-success">Add Job</button>
