Created functionality for sent and reponse buttons

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -88,6 +88,11 @@
   background-color: rgba(59, 175, 218, 0.35) !important;
 }
 
+.date-added {
+  font-size: 12px;
+  margin-top: 4px;
+}
+
 /*************************
 Panels: Dropdown btn/icons
 *************************/
