--- a/app/views/jobs/partials/_applied.html.erb
+++ b/app/views/jobs/partials/_applied.html.erb
@@ -9,7 +9,7 @@
       <div class="panel-body">
         <h5 class="company"><%= job.company %></h5>
         <p><%= job.location %></p>
-        <form action="/reponse/<%= job.id %>" method="post" style="display:inline;">
+        <form action="/response/<%= job.id %>" method="post" style="display:inline;">
           <input type="submit" name="name" value="Received Response" class="btn btn-sm btn-primary">
           <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
         </form>
