--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -43,3 +43,9 @@
 .homepage {
   background-color: $primary-gray !important;
 }
+
+.alert {
+  font-family: $main-font;
+  letter-spacing: 2px;
+  margin-top: 25px;
+}
