--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
       <!-- REGISTRAION SUCCESS -->
       <% if flash[:success]
         flash[:success].each do |message| %>
-        <div class="alert alert-danger">
+        <div class="alert alert-success">
           <strong>Wait a tick!</strong> <%= error %>.
         </div>
         <% end %>
