Added response received button

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -44,6 +44,12 @@
   height: 100% !important;
 }
 
+.placeholder {
+  font-family: $main-font;
+  font-size: 30px;
+  opacity: 0.25;
+}
+
 /*************************
 		  Panels
 *************************/
