--- a/app/views/jobs/partials/_applied.html.erb
+++ b/app/views/jobs/partials/_applied.html.erb
@@ -1,5 +1,5 @@
 <% if @applied_jobs.count < 1 %>
-  <p class="text-center">Apply for some jobs!</p>
+  <p class="text-center placeholder">Apply, apply, apply.</p>
 <% else %>
   <% @applied_jobs.each do |job| %>
     <div class="panel panel-default">
