Added Backtrack functionality

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -119,6 +119,10 @@ Panels: Dropdown btn/icons
   background-color: #DA4453;
 }
 
+.fa-arrow-circle-left {
+  background-color: #FC6E51;
+}
+
 .dropdown-menu li span {
     padding: 5px 20px;
     color: #FFF;
