Changed option buttons from POST to GET

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,6 @@
 <%= render 'layouts/nav' %>
 <%= render 'jobs/partials/add_job_modal' %>
+<%= render 'jobs/partials/edit_job_modal' %>
 <div class="wrapper">
   <div class="row">
     <div class="col-md-3">
