--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -105,6 +105,7 @@ Panels: Dropdown btn/icons
 .dropdown-menu .fa {
   border-radius: 4px;
   padding: 4px;
+  margin-right: 8px;
 }
 
 .fa-link {
@@ -123,24 +124,11 @@ Panels: Dropdown btn/icons
   background-color: #FC6E51;
 }
 
-.dropdown-menu li span {
-    padding: 5px 20px;
-    color: #FFF;
-    input[type="submit"] {
-      background: none;
-      border: none;
-      font-weight: 400;
-    }
-}
-
 .dropdown-menu li:hover {
   background-color: rgba(214, 214, 214, 0.35);
   padding: 2px 0;
 }
 
-.special-icon {
-  margin-right: 10px !important;
-}
 
 /*************************
 		  Popovers
