--- a/app/views/jobs/partials/_response.html.erb
+++ b/app/views/jobs/partials/_response.html.erb
@@ -14,7 +14,7 @@
           <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
         </form>
         <div class="btn-group pull-right" role="group" aria-label="...">
-          <a href="<%= %>" class="btn btn-sm btn-default"><i class="fa fa-info"></i></a>
+          <a href="<%= %>" class="btn btn-sm btn-default" data-toggle="modal" data-target="#showModal"><i class="fa fa-info"></i></a>
           <div class="btn-group">
             <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-cog"></i>
@@ -24,7 +24,7 @@
                 <a href="<%= job.link %>" target="_blank"><i class="fa fa-link special-icon"></i>Link to Job Posting</a>
               </li>
               <li>
-                <a href="/edit/<%= job.id %>"><i class="fa fa-pencil"></i>Edit</a>
+                <a href="/edit/<%= job.id %>" data-toggle="modal" data-target="#editModal"><i class="fa fa-pencil"></i>Edit</a>
               </li>
               <li>
                 <a href="/backtrack/<%= job.id %>"><i class="fa fa-arrow-circle-left"></i>Backtrack</a>
@@ -37,5 +37,22 @@
         </div>
       </div>
     </div>
+    <!-- SHOW JOB MODAL -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="showModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title"><%= job.title %></h4>
+          </div>
+          <div class="modal-body">
+            <h6>Located in <%= job.location %></h6>
+            <p><%= job.description %></p>
+          </div>
+          <div class="modal-footer">
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
   <% end %>
 <% end %>
