--- a/app/views/jobs/partials/_jobs.html.erb
+++ b/app/views/jobs/partials/_jobs.html.erb
@@ -1,5 +1,5 @@
 <% if @new_jobs.count < 1 %>
-  <p class="text-center"><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus-square-o" style="font-size: 100px; color: rgba(158, 158, 158, 0.45)"></i></a></p>
+    <p class="text-center"><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus-square-o" style="font-size: 100px; color: rgba(158, 158, 158, 0.45)"></i></a></p>
 <% else %>
   <% @new_jobs.each do |job| %>
     <div class="panel panel-default">
@@ -9,12 +9,12 @@
       <div class="panel-body">
         <h5 class="company"><%= job.company %></h5>
         <p><%= job.location %></p>
-        <form action="/sent/<%= job.id %>" method="post" style="display:inline;">
-          <input type="submit" name="name" value="Application Sent" class="btn btn-sm btn-success">
+        <form action="/response/<%= job.id %>" method="post" style="display:inline;">
+          <input type="submit" name="name" value="Received Response" class="btn btn-sm btn-primary">
           <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
         </form>
         <div class="btn-group pull-right" role="group" aria-label="...">
-          <a href="<%= %>" class="btn btn-sm btn-default"><i class="fa fa-info"></i></a>
+          <a href="<%= %>" class="btn btn-sm btn-default" data-toggle="modal" data-target="#showModal"><i class="fa fa-info"></i></a>
           <div class="btn-group">
             <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-cog"></i>
@@ -24,12 +24,71 @@
                 <a href="<%= job.link %>" target="_blank"><i class="fa fa-link special-icon"></i>Link to Job Posting</a>
               </li>
               <li>
-                <a href="/edit/<%= job.id %>"><i class="fa fa-pencil"></i>Edit</a>
+                <a href="" data-toggle="modal" data-target="#editModal"><i class="fa fa-pencil"></i>Edit</a>
+              </li>
+              <li>
+                <a href="/backtrack/<%= job.id %>"><i class="fa fa-arrow-circle-left"></i>Backtrack</a>
               </li>
               <li>
                 <a href="/delete/<%= job.id %>"><i class="fa fa-trash-o"></i>Delete</a>
               </li>
             </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- SHOW JOB MODAL -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="showModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title"><%= job.title %></h4>
+          </div>
+          <div class="modal-body">
+            <h6>Located in <%= job.location %></h6>
+            <p><%= job.description %></p>
+          </div>
+          <div class="modal-footer">
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    <!-- EDIT JOB MODAL -->
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h3 class="modal-title" id="myModalLabel">Update Job Information</h3>
+          </div>
+          <div class="modal-body">
+            <form role="form" method="post" action="/edit/<%= job.id %>">
+              <div class="form-group">
+                <label for="jobTitle">Job Title</label>
+                <input type="text" class="form-control" name="title" value="<%= job.title %>">
+              </div>
+              <div class="form-group">
+                <label for="company">Company</label>
+                <input type="text" class="form-control" name="company" value="<%= job.company %>">
+              </div>
+              <div class="form-group">
+                <label for="location">Location</label>
+                <input type="text" class="form-control" name="location" value="<%= job.location %>">
+              </div>
+              <div class="form-group">
+                <label for="link">Link to Job Posting</label>
+                <input type="text" class="form-control" name="link" value="<%= job.link %>">
+              </div>
+              <div class="form-group">
+                <label for="location">Job Description</label>
+                <textarea class="form-control" rows="3" name="description"><%= job.description %></textarea>
+              </div>
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-warning">Update Job</button>
+                <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+              </div>
+            </form>
           </div>
         </div>
       </div>
