--- a/app/views/jobs/partials/_response.html.erb
+++ b/app/views/jobs/partials/_response.html.erb
@@ -24,7 +24,7 @@
                 <a href="<%= job.link %>" target="_blank"><i class="fa fa-link special-icon"></i>Link to Job Posting</a>
               </li>
               <li>
-                <a href="/edit/<%= job.id %>" data-toggle="modal" data-target="#editModal"><i class="fa fa-pencil"></i>Edit</a>
+                <a href="" data-toggle="modal" data-target="#editModal"><i class="fa fa-pencil"></i>Edit</a>
               </li>
               <li>
                 <a href="/backtrack/<%= job.id %>"><i class="fa fa-arrow-circle-left"></i>Backtrack</a>
@@ -54,5 +54,44 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+    <!-- EDIT JOB MODAL -->
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h3 class="modal-title" id="myModalLabel">Update Job Information</h3>
+          </div>
+          <div class="modal-body">
+            <form role="form" method="post" action="/edit/<%= job.id %>">
+              <div class="form-group">
+                <label for="jobTitle">Job Title</label>
+                <input type="text" class="form-control" name="title" value="<%= job.title %>">
+              </div>
+              <div class="form-group">
+                <label for="company">Company</label>
+                <input type="text" class="form-control" name="company" value="<%= job.company %>">
+              </div>
+              <div class="form-group">
+                <label for="location">Location</label>
+                <input type="text" class="form-control" name="location" value="<%= job.location %>">
+              </div>
+              <div class="form-group">
+                <label for="link">Link to Job Posting</label>
+                <input type="text" class="form-control" name="link" value="<%= job.link %>">
+              </div>
+              <div class="form-group">
+                <label for="location">Job Description</label>
+                <textarea class="form-control" rows="3" name="description"><%= job.description %></textarea>
+              </div>
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-warning">Update Job</button>
+                <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
 <% end %>
