Added Note model, allowed user to bypass note input

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -180,7 +180,7 @@ form {
   font-weight: 300;
 }
 
-input[type="submit"] {
+input[type="submit"], .next {
   font-family: $main-font;
   font-weight: 600;
 }
