--- a/app/views/jobs/partials/_jobs.html.erb
+++ b/app/views/jobs/partials/_jobs.html.erb
@@ -14,7 +14,7 @@
           <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
         </form>
         <div class="btn-group pull-right" role="group" aria-label="...">
-          <a href="<%= %>" class="btn btn-sm btn-default" data-toggle="modal" data-target="#showModal"><i class="fa fa-info"></i></a>
+          <a href="<%= %>" class="btn btn-sm btn-default" data-toggle="modal" data-target="#newShowModal"><i class="fa fa-info"></i></a>
           <div class="btn-group">
             <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-cog"></i>
@@ -24,7 +24,7 @@
                 <a href="<%= job.link %>" target="_blank"><i class="fa fa-link special-icon"></i>Link to Job Posting</a>
               </li>
               <li>
-                <a href="" data-toggle="modal" data-target="#editModal"><i class="fa fa-pencil"></i>Edit</a>
+                <a href="" data-toggle="modal" data-target="#newEditModal"><i class="fa fa-pencil"></i>Edit</a>
               </li>
               <li>
                 <a href="/backtrack/<%= job.id %>"><i class="fa fa-arrow-circle-left"></i>Backtrack</a>
@@ -38,7 +38,7 @@
       </div>
     </div>
     <!-- SHOW JOB MODAL -->
-    <div class="modal fade" tabindex="-1" role="dialog" id="showModal">
+    <div class="modal fade" tabindex="-1" role="dialog" id="newShowModal">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -55,7 +55,7 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
     <!-- EDIT JOB MODAL -->
-    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal fade" id="newEditModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
